<resources>
    <string name="app_name">Shortly</string>
    <string name="title_main">Let\'s get started!</string>
    <string name="text_description">Paste your first link into the field to\nshorten it</string>
    <string name="text_history">Your Link History</string>
    <string name="hint_link">Paste your link here</string>
    <string name="error_link">Please add a link here</string>
    <string name="btn_shorten">Shorten it!</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_share">Share</string>
    <string name="btn_copied">Copied!</string>
    <string name="title_error">Error</string>
    <string name="search_link">Search shorten link</string>

    <string name="short_link">Short a link</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_error">Silerken Bir Hata Oluştu!</string>
    <string name="copied">Copied</string>
    <string name="share">Share</string>
    <string name="in_app_review_success_message">Thank you for your review</string>

    <!--  Accessibility -->
    <string name="content_description_app_logo">Shortly app logo</string>
    <string name="content_description_shorten_it">Short the original link</string>
    <string name="content_description_home_shape">Shortly app shape vector</string>
    <string name="content_description_home_banner">Shortly app banner</string>
    <string name="content_description_long_link">Long link</string>
    <string name="content_description_remove">Remove shorten link</string>
    <string name="content_description_short_link">Short link</string>
    <string name="content_description_share">Share shorten link</string>
    <string name="content_description_copy">Copy shorten link</string>
</resources>