...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shorten_link_edt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@drawable/bg_edittext"
...
            android:hint="@string/hint_link"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textColorHint="@color/violets_are_blue_80"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/shorten_it_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_bottom"
            app:layout_constraintVertical_chainStyle="packed" />

...
